# wasmcloud-js

./: .eslintrc  .gitignore  .npmignore  .prettierrc.json  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: build.yml
examples/console/: README.md  esbuild.js  index.html  main.js
examples/simple/: Makefile  README.md  example-webpack.config.js  index.bundle.js  index.html  main.css  main.js  out.js
src/: actor.ts  events.ts  fetch.ts  host.ts  index.ts  types.ts  util.ts  wasmbus.ts
test/: index.test.ts
test/infra/: docker-compose.yml  docker-registry.yml  nats.conf
wasmcloud-rs-js/: .gitignore  Cargo.toml  README.md
wasmcloud-rs-js/src/: lib.rs
