[package]
name = "wasmcloud-rs-js"
version = "0.1.0"
authors = ["ks2211 <kaushik@cosmonic.com>"]
edition = "2018"
description = "wasmcloud/wascap/nkeys rust crates ported to JavaScript via wasm-bindgen and wasm-pack"
repository = "github.com/wasmCloud/wasmcloudjs"
license = "Apache 2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
wascap = "0.6.0"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
js-sys = "0.3.52"
nkeys = "0.1.0"
console_error_panic_hook = { version = "0.1.6", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
